--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-papaparse": "^4.4.0",
+    "react-scrollbars-custom": "^4.1.1",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.6"
   },
