--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-papaparse": "^4.4.0",
     "react-scrollbars-custom": "^4.1.1",
     "styled-components": "^6.1.19",
+    "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
